kubernetes/development/topiaas-app/topiaas-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: portal
  labels:
    name: portal
spec:
  containers:
    - name: topiaas
      image: topiaas/portal:latest
      imagePullPolicy: Always
      ports:
        - containerPort: 5000
        - containerPort: 5800
      command:
        - "python"
      args:
        - "-m"
        - "ptvsd"
        - "--host"
        - "0.0.0.0"
        - "--port"
        - "5800"
        - "--multiprocess"
        - "-m"
        - "flask"
        - "run"
        - "--host"
        - "0.0.0.0"
        # - "--port"
        # - "5000"
      # python3 -m ptvsd --host 0.0.0.0 --port 3500 --multiprocess --wait -m flask run
      resources:
        limits:
          memory: "512Mi"
          cpu: "500m"
      volumeMounts:
        - mountPath: /app
          name: portalsrc
  volumes:
    - name: portalsrc
      hostPath:
        path: /app
