kubernetes/development/topiaas-app/debug-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: topiaas-app-debug
spec:
  selector:
    app: topiaas
  ports:
    - protocol: TCP
      port: 5800
