kubernetes/development/topiaas-app/topiaas-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: topiaas-service
spec:
  selector:
    app: topiaas
  ports:
    - protocol: TCP
      port: 5000
