kubernetes/development/topiaas-app/topiaas-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: topiaas-ingress
  labels:
    name: topiaas-ingress
spec:
  rules:
    - host: dev.topiaas.ml
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: topiaas-service
                port:
                  number: 5000
